--- a/supDeVinci.html
+++ b/supDeVinci.html
@@ -11,5 +11,5 @@
     <body>
         <div id="root"></div>
     </body>
-    <script src="main.js"></script>
+    <script src="secondMain.js"></script>
 </html>
